feat / projects and tasks

--- a/src/localization/ar/index.json
+++ b/src/localization/ar/index.json
@@ -37,9 +37,17 @@
     "tasks": "المهام",
     "searchBy": "البحث بـ ",
     "searchAbout": "البحث عن...",
+    "addNewMission": "اضافه مهمة جديدة",
+    "allMissions": "كل المهام",
+    
+    "createdBy": "أنشأت من قبل",
+    "missionResponsibility": "مسئول المهمة",
+    "missionImportance": "اهمية المهمة",
     "addNewMeeting": "اضافه اجتماع جديد",
     "allMeetings": "كل الاجتماعات",
     "aboutMeeting": "عن الاجتماع",
+    "missions": "مهام",
+
     "meetingDescription": "وصف الاجتماع",
     "meetingDate": "تاريخ الاجتماع",
     "fromHour": "من الساعة",
@@ -76,7 +84,10 @@
     "endDate": "تاريخ الانتهاء",
     "projectManager": "مدير المشروع",
     "projectStatus": "حالة المشروع",
-
+    "status": "حالة",
+    "project": "المشروع",
+    "mission": "مهمة",
+    "missionDate": "تاريخ المهمة",
     "committeeName": "اسم اللجنة",
     "taskCount": "عدد المهمات",
     "memberCount": "عدد الأعضاء",
@@ -141,6 +152,7 @@
     "createTask": "إنشاء المهمة",
     "writeTask": "قم بكتابة المهمة",
     "uploadFiles": "بامكانك ارفاق ملفات للمهمة",
+    "uploadFile": "ارفاق ملف",
     "notifications": "الاشعارات",
     "logOut": "تسجيل الخروج",
     "profile": "الملف الشخصي",
@@ -223,7 +235,11 @@
     "total": "الإجمالي",
     "internalMeetings": "اجتماعات داخلية",
     "externalMeetings": "اجتماعات خارجية",
-
+    "frequencySelector": "تكرار المهمة",
+    "daily": "يوميا",
+    "weekly": "اسبوعيا",
+    "monthly": "شهريا",
+    "yearly": "سنويا",
     "meetingPriorityEvaluation": "تقييم أولية الاجتماع",
     "now": "حالا",
     "meetingLocation": "مكان الاجتماع",
@@ -249,6 +265,7 @@
     "agendaDescription": "وصف الاجندة",
     "addAnotherAgenda": "إضافة اجنده آخرى",
     "addAgenda": "إضافة اجنده",
+    "notAvailable": "غير محدد",
     "meetingAgenda": "اجندة الاجتماع",
     "enterAgendaOrMore": "ادخل اجنده للاجتماع او اكثر",
     "contactPoints": "نقاط الاتصال",
