--- a/src/localization/en/index.json
+++ b/src/localization/en/index.json
@@ -20,6 +20,15 @@
     "confirmNewPassword": "Confirm new password",
     "newPassword": "New Password",
     "home": "Home",
+    "missions": "Missions",
+    "missionDate": "Mission Date",
+    "frequencySelector": "Repeat important",
+    "daily": "daily",
+    "weekly": "weekly",
+    "monthly": "monthly",
+    "yearly": "yearly",
+    "notAvailable": "Not Available",
+
     "welcomeDay": "Good morning",
     "welcomeNight": "Good evening",
     "wishHappyDay": "We wish you a happy day.",
@@ -37,9 +46,16 @@
     "important": "Important",
     "notImportant": "Not Important",
     "allProjects": "All Projects",
-
+    "allMissions": "All Missions",
+    "createdBy": "Created By",
+    "status": "Status",
+    "project": "Project",
+    "mission": "Mission",
+    "missionResponsibility": "Mission Responsibility",
+    "missionImportance": "Importance of the mission",
     "departmentName": "Department Name",
     "projectName": "Project Name",
+    "addNewMission": "Add New Mission",
     "addNewProject": "Add New Project",
     "projectDescription": "Project Description",
     "startsAt": "Starts At",
@@ -138,6 +154,7 @@
     "createTask": "Create Task",
     "writeTask": "قم بكتابة المهمة",
     "uploadFiles": "You can attach files for the task",
+    "uploadFile": "Upload file",
     "notifications": "Notification",
     "logOut": "Log Out",
     "profile": "Profile",
