update on mission table and services

--- a/src/localization/en/index.json
+++ b/src/localization/en/index.json
@@ -291,6 +291,9 @@
     "internal": "Internal",
     "external": "External",
     "complete": "Complete",
+    "high": "High",
+    "medium": "Medium",
+    "low": "Low",
     "permanentCommittees": "Permanent Committees",
     "fixedCommittees": "Fixed Committees",
     "procurementCommittees": "Procurement Committees",
