--- a/src/localization/ar/index.json
+++ b/src/localization/ar/index.json
@@ -293,6 +293,9 @@
     "completed": "مكتمل",
     "ongoing": "قائم",
     "incomplete": "غير مكتمل",
+    "high": "عالية",
+    "medium": "متوسطة",
+    "low": "منخفضة",
     "internal": "داخلي",
     "external": "خارجي",
     "complete": "مكتمل",
